# lvgl

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  lvgl_demo.code-workspace  simulation.code-workspace
.eide/: eide.json
lvgl/: lv_conf.h
lvgl/demos/music/: lv_demo_music.c  lv_demo_music_main.c
lvgl/demos/widgets/: lv_demo_widgets.c
lvgl/examples/libs/ffmpeg/: lv_example_ffmpeg_1.c  lv_example_ffmpeg_2.c
lvgl_drivers/: lv_drv_conf.h  win_drv.c
lvgl_drivers/sdl/: sdl.c  sdl.h
lvgl_drivers/win32drv/: win32drv.c  win32drv.h
src/: main.c
src/mydemo/: mydemo.c  mydemo.h  mydemo1.c  mydemo2.c  mydemo_ble.c  mydemo_serial.c
src/porting/: lv_porting.c  lv_porting.h
src/serial/: main.c  serial.c  serial.h  txtsend_test.c  txtsend_test.h  读我.txt
src/serial/wincomsend/: serial.c  serial.h
src/snakeicon/: snakeicon.c  snakeicon.h
